// Vitest Snapshot v1

exports[`Drivers > has a list of drivers 1`] = `
{
  "content": [
    "./pages/**/*.{js,ts,jsx,tsx}",
    "./components/**/*.{js,ts,jsx,tsx}",
    "./src/**/*.{js,ts,jsx,tsx}",
    "./app/**/*.{js,ts,jsx,tsx}",
  ],
  "cssLocation": [Function],
  "initCommands": [
    "npx tailwindcss init -p",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss",
    "autoprefixer",
  ],
  "steps": [],
}
`;

exports[`Drivers > has a list of drivers 2`] = `
{
  "content": [
    "./components/**/*.{js,vue,ts}",
    "./layouts/**/*.vue",
    "./pages/**/*.vue",
    "./plugins/**/*.{js,ts}",
    "./nuxt.config.{js,ts}",
  ],
  "cssLocation": "./assets/css/main.css",
  "initCommands": [
    "npx tailwindcss init",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss@latest",
    "autoprefixer@latest",
    "@nuxt/postcss8",
  ],
  "steps": [
    [Function],
  ],
}
`;

exports[`Drivers > has a list of drivers 3`] = `
{
  "content": [
    "./components/**/*.{js,vue,ts}",
    "./layouts/**/*.vue",
    "./pages/**/*.vue",
    "./app.vue",
    "./plugins/**/*.{js,ts}",
  ],
  "cssLocation": "./assets/css/main.css",
  "initCommands": [
    "npx tailwindcss init",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss@latest",
    "autoprefixer@latest",
  ],
  "steps": [
    [Function],
  ],
}
`;

exports[`Drivers > has a list of drivers 4`] = `
{
  "content": [
    "./app/**/*.{js,ts,jsx,tsx}",
  ],
  "cssLocation": "./styles/app.css",
  "initCommands": [
    "npx tailwindcss init -p",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss",
    "autoprefixer",
  ],
  "steps": [
    [Function],
    [Function],
  ],
}
`;

exports[`Drivers > has a list of drivers 5`] = `
{
  "content": [
    "./src/**/*.{html,js,svelte,ts}",
  ],
  "cssLocation": "./src/app.css",
  "initCommands": [
    "npx tailwindcss init tailwind.config.cjs -p",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss",
    "autoprefixer",
  ],
  "steps": [
    [Function],
    [Function],
  ],
}
`;

exports[`Drivers > has a list of drivers 6`] = `
{
  "content": [
    "./index.html",
    "./src/**/*.{vue,js,ts,jsx,tsx,svelte}",
  ],
  "cssLocation": "./src/style.css",
  "initCommands": [
    "npx tailwindcss init -p",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss",
    "autoprefixer",
  ],
  "steps": [
    [Function],
  ],
}
`;

exports[`Drivers > has a list of drivers 7`] = `
{
  "content": [
    "./src/**/*.{html,ts}",
  ],
  "cssLocation": "./src/styles.css",
  "initCommands": [
    "npx tailwindcss init",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss",
    "autoprefixer",
  ],
  "steps": [],
}
`;

exports[`Drivers > has a list of drivers 8`] = `
{
  "content": [
    "./src/**/*.{js,jsx,ts,tsx}",
  ],
  "cssLocation": "./src/index.css",
  "initCommands": [
    "npx tailwindcss init -p",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss",
    "autoprefixer",
  ],
  "steps": [],
}
`;

exports[`Drivers > has a list of drivers 9`] = `
{
  "content": [
    "./resources/**/*.blade.php",
    "./resources/**/*.{js,jsx,ts,tsx,vue,svelte}",
  ],
  "cssLocation": "./resources/css/app.css",
  "initCommands": [
    "npx tailwindcss init -p",
  ],
  "requiredDependencies": [
    "tailwindcss",
    "postcss",
    "autoprefixer",
  ],
  "steps": [
    [Function],
  ],
}
`;
